# ChangeLog for mail-client/claws-mail-attachwarner
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/mail-client/cvs-repo/gentoo-x86/mail-client/claws-mail-attachwarner/ChangeLog,v 1.41 2010/03/11 20:41:34 maekke Exp $

  11 Mar 2010; Markus Meier <maekke@gentoo.org>
  claws-mail-attachwarner-0.2.18.ebuild:
  amd64 stable, bug #304353

  11 Feb 2010; Christian Faulhammer <fauli@gentoo.org>
  claws-mail-attachwarner-0.2.18.ebuild:
  stable x86, bug 304353

*claws-mail-attachwarner-0.2.18 (08 Jan 2010)

  08 Jan 2010; Christian Faulhammer <fauli@gentoo.org>
  +claws-mail-attachwarner-0.2.18.ebuild:
  version bump

  26 Aug 2009; Christian Faulhammer <fauli@gentoo.org>
  -claws-mail-attachwarner-0.2.16.ebuild:
  clean up

  01 Aug 2009; Jeremy Olexa <darkside@gentoo.org>
  claws-mail-attachwarner-0.2.17.ebuild:
  amd64 stable, bug 278682

  24 Jul 2009; Christian Faulhammer <fauli@gentoo.org>
  claws-mail-attachwarner-0.2.17.ebuild:
  stable x86, bug 278682

  06 Jul 2009; Christian Faulhammer <fauli@gentoo.org>
  claws-mail-attachwarner-0.2.17.ebuild:
  fix Claws version number

*claws-mail-attachwarner-0.2.17 (06 Jul 2009)

  06 Jul 2009; Christian Faulhammer <fauli@gentoo.org>
  -claws-mail-attachwarner-0.2.15.ebuild,
  +claws-mail-attachwarner-0.2.17.ebuild:
  version bump and clean up

  02 Jul 2009; Markus Meier <maekke@gentoo.org>
  claws-mail-attachwarner-0.2.16.ebuild:
  amd64 stable, bug #273294

  09 Jun 2009; Christian Faulhammer <fauli@gentoo.org>
  claws-mail-attachwarner-0.2.16.ebuild:
  stable x86, bug 273294

*claws-mail-attachwarner-0.2.16 (29 Apr 2009)

  29 Apr 2009; Christian Faulhammer <fauli@gentoo.org>
  +claws-mail-attachwarner-0.2.16.ebuild:
  version bump, bug 266782 by microbiolog AT gmail.com

  14 Mar 2009; nixnut <nixnut@gentoo.org> ChangeLog:
  ~ppc'd

  29 Jan 2009; Christian Faulhammer <fauli@gentoo.org>
  -claws-mail-attachwarner-0.2.14.ebuild:
  clean up
