@@ -1,0 +1,32 @@
+# Copyright 1999-2010 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /usr/local/ssd/gentoo-x86/output/mail-client/cvs-repo/gentoo-x86/mail-client/claws-mail-attachwarner/Attic/claws-mail-attachwarner-0.2.19.ebuild,v 1.1 2010/06/12 07:07:38 fauli Exp $
+
+MY_P="${P#claws-mail-}"
+
+DESCRIPTION="Warn about missing attachment, if it's mentioned in message body."
+HOMEPAGE="http://www.claws-mail.org/"
+SRC_URI="http://www.claws-mail.org/downloads/plugins/${MY_P}.tar.gz"
+LICENSE="GPL-3"
+SLOT="0"
+KEYWORDS="~amd64 ~ppc ~x86"
+IUSE="nls"
+RDEPEND=">=mail-client/claws-mail-3.7.6
+		nls? ( >=sys-devel/gettext-0.12.1 )"
+DEPEND="${RDEPEND}
+	dev-util/pkgconfig"
+
+S="${WORKDIR}/${MY_P}"
+
+src_compile() {
+	econf $(use_enable nls) || die "econf failed"
+	emake || die "emake failed"
+}
+
+src_install() {
+	emake DESTDIR="${D}" install || die "make install failed"
+	dodoc ChangeLog README
+
+	# kill useless files
+	rm -f "${D}"/usr/lib*/claws-mail/plugins/*.{a,la}
+}
