@@ -1,0 +1,27 @@
+# Copyright 1999-2010 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /usr/local/ssd/gentoo-x86/output/mail-client/cvs-repo/gentoo-x86/mail-client/claws-mail-bsfilter/Attic/claws-mail-bsfilter-1.0.4.ebuild,v 1.1 2010/06/12 07:11:22 fauli Exp $
+
+MY_P="${PN#claws-mail-}_plugin-${PV}"
+
+DESCRIPTION="Plugin for the Bayesian type BSfilter"
+HOMEPAGE="http://www.claws-mail.org/"
+SRC_URI="http://www.claws-mail.org/downloads/plugins/${MY_P}.tar.gz"
+LICENSE="GPL-3"
+SLOT="0"
+KEYWORDS="~amd64 ~x86"
+IUSE=""
+RDEPEND=">=mail-client/claws-mail-3.7.6"
+DEPEND="${RDEPEND}
+	mail-filter/bsfilter
+	dev-util/pkgconfig"
+
+S="${WORKDIR}/${MY_P}"
+
+src_install() {
+	emake DESTDIR="${D}" install
+	dodoc ChangeLog README
+
+	# kill useless files
+	rm -f "${D}"/usr/lib*/claws-mail/plugins/*.{a,la}
+}
